# SentinelAI

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODING-STANDARDS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sentinelai.yaml
.github/workflows/: ci.yml
demo/: README.md  alert-connection-pool.json  alert-rate-limiter.json  sentinelai-demo.yaml
demo/broken-app/src/: auth_service.py  rate_limiter.py
docs/: INTEGRATIONS.md
docs/designs/: sentinelai-framework.md
idea/ceo-review/: CEO-REVIEW.md  TODOS.md
src/sentinelai/: __init__.py
src/sentinelai/cli/: deploy.py  fix.py  main.py  run.py  scaffold.py  timeline.py
src/sentinelai/contracts/: alert_source.py  code_fixer.py  deployer.py  pr_opener.py  ticket_system.py  triage_engine.py  validator.py
src/sentinelai/core/: config.py  errors.py  events.py  pipeline.py  plugin.py
src/sentinelai/plugins/deployers/: command_deployer.py
src/sentinelai/plugins/fixers/: claude_fixer.py
src/sentinelai/plugins/pr_openers/: github_pr.py
src/sentinelai/plugins/sources/: file_source.py  webhook.py
src/sentinelai/plugins/sources/adapters/: __init__.py  base.py  datadog.py  gcp_monitoring.py  generic.py  pagerduty.py
src/sentinelai/plugins/tickets/: github_issues.py  jira.py
src/sentinelai/plugins/triage/: claude.py  gemini.py
src/sentinelai/plugins/validators/: command_validator.py
tests/fixtures/: demo_alert.json
tests/integration/: test_triage_pipeline.py
tests/unit/: test_adapters.py  test_code_fixer.py  test_config.py  test_deploy.py  test_errors.py  test_events.py  test_file_source.py  test_pipeline.py  test_plugin.py  test_scaffold.py  test_ticket_system.py  test_timeline_cli.py  test_webhook.py
